# python-sdk

./: .gitignore  CHANGELOG.rst  README.rst  develop.sh  docker-compose.dev.yml  flake.nix  pyproject.toml
.buildkite/: pipeline.yml
docs/: getting-started.mdx  index.mdx  indexer.mdx  pending-data.mdx
docs/reference/: indexer.mdx  protocol.mdx  starknet.mdx
docs/upgrading/: 0-4-to-0.5.mdx  0.5-to-0.6.mdx
examples/: dynamic_filter.py  save_stream.py  simple_client.py  starknet_indexer.py
examples/dynamic_event_filter/: main.py
examples/lens-protocol/: main.py
examples/pending/: main.py
examples/starknet/: configuration.toml  docker-compose.yml  main.py
protos/starknet/: filter.proto  starknet.proto
src/apibara/: __init__.py  cli.py  client.py  cursor.py  logging.py  model.py  rpc.py  starknet.py
src/apibara/application/: indexer_service_pb2.py  indexer_service_pb2_grpc.py
src/apibara/indexer/: __init__.py  configuration.py  events.py  handler.py  indexer.py  info.py  runner.py  storage.py
src/apibara/legacy/: __init__.py  model.py  runner.py  storage.py
src/apibara/protocol/: __init__.py  client.py
src/apibara/protocol/proto/: stream_pb2.py  stream_pb2.pyi  stream_pb2_grpc.py  stream_pb2_grpc.pyi
src/apibara/starknet/: __init__.py  cursor.py  felt.py  filter.py  hash.py  indexer.py  rpc.py
src/apibara/starknet/proto/: filter_pb2.py  filter_pb2.pyi  starknet_pb2.py  starknet_pb2.pyi  starknet_pb2_grpc.pyi  types_pb2.py  types_pb2.pyi
test/: conftest.py
test/indexer/: test_runner.py  test_storage.py
test/starknet/: test_felt.py
tests/: conftest.py  test_apibara.py
tests/fixtures/: block_11000.json
tests/indexer/: test_events.py  test_handler.py  test_storage.py
