[tool.poetry]
name = "apibara"
version = "0.7.2"
description = "Apibara cliend SDK. Stream and transform on-chain data with Python."
authors = ["Francesco Ceccon <francesco@apibara.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://www.apibara.com"
repository= "https://github.com/apibara/python-sdk"
keywords = [
    "ethereum",
    "web3",
    "starknet"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
grpcio = ">=1.50,<2.0"
protobuf = ">=4.20,<5"
pymongo = "^4.3.3"

[tool.poetry.extras]
indexer = ["pymongo"]

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
